<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/WeightOfPrakage"
        android:layout_width="284dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/weight_of_package"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:text="@string/zero"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/WeightOfPrakage"
        app:layout_constraintStart_toStartOf="@+id/WeightOfPrakage"
        app:layout_constraintTop_toBottomOf="@+id/WeightOfPrakage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="78dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/in_ounces"
        app:layout_constraintEnd_toEndOf="@+id/weightEditText"
        app:layout_constraintStart_toStartOf="@+id/weightEditText"
        app:layout_constraintTop_toBottomOf="@+id/weightEditText" />

    <TableLayout
        android:layout_width="395dp"
        android:layout_height="561dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="162dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:gravity="center">

            <TextView
                android:id="@+id/BaseCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_weight="3"
                android:text="@string/base_cost" />

            <TextView
                android:id="@+id/DisplayBcost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:text="@string/currency_format" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:gravity="center">

            <TextView
                android:id="@+id/AddedCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_weight="3"
                android:text="@string/added_cost" />

            <TextView
                android:id="@+id/DisplayACost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:text="@string/currency_format" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:gravity="center">

            <TextView
                android:id="@+id/TotalCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/total_cost" />

            <TextView
                android:id="@+id/DisplayTCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/currency_format" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</android.support.constraint.ConstraintLayout>